--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ url:
 
 # Change this to your base URL starting with forward slash if site is in gh-pages branch
 # For example /branchName
-baseurl:"iserlohnwind.github.io"
+baseurl:
 
 # Change this to your google analytics ID
 google_analytics:
